# component-sage-intacct-extractor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  configRowSchema.json  configSchema.json  configuration_description.md  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
component_config/sample-config/: config.json
scripts/: build_n_test.sh
src/: client.py  component.py  configuration.py  writer.py
tests/: test_client.py  test_component.py  test_configuration.py  test_functional.py
tests/functional/01_full_load_customers/source/data/: config.json  output_snapshot.json
tests/functional/01_full_load_customers/source/data/cassettes/: requests.json
tests/functional/02_incremental_load_customers/source/data/: config.json  output_snapshot.json
tests/functional/02_incremental_load_customers/source/data/cassettes/: requests.json
tests/functional/03_full_load_vendors/source/data/: config.json  output_snapshot.json
tests/functional/04_incremental_load_vendors/source/data/: config.json  output_snapshot.json
tests/functional/05_full_load_gl_accounts/source/data/: config.json  output_snapshot.json
tests/functional/06_incremental_load_gl_accounts/source/data/: config.json  output_snapshot.json
tests/functional/07_full_load_invoices/source/data/: config.json  output_snapshot.json
tests/functional/08_incremental_load_invoices/source/data/: config.json  output_snapshot.json
tests/setup/: configs.json
(+6 files in other folders)
