[project]
name = "sage-intacct-extractor"
dynamic = ["version"]
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "backoff>=2.2.1",
    "keboola-component>=1.6.10",
    "keboola-utils>=1.1.0",
    "pydantic>=2.11.3",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.1",
    "keboola-datadirtest>=2.0.0",
    "mock>=5.2.0",
    "pytest>=9.0.2",
    "ruff>=0.11.5",
]
